# life

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: test.yml
crates/life-utils/: Cargo.toml  README.md
crates/life-utils/src/: scanner.rs
crates/lifelib/: Cargo.toml  README.md
crates/lifelib/src/: errors.rs  image.rs  lib.rs  utilities.rs
crates/lifelib/src/formats/: plaintext.rs  rle.rs  util.rs
crates/tick/: Cargo.toml  README.md
crates/tick/src/: main.rs  tickset.rs  ticktemplate.rs
crates/tick/tests/: cli.rs
crates/tick/tests/data/: glider-3-named.cells  glider-4-named.cells  glider.cells  glider.rle  glider1.cells  glider1.rle  glider10-wrapxy.rle  glider11.cells  glider13-wrapy.rle  glider14-wrapxy.rle  glider2.cells  glider2.rle  glider3.cells  glider3.rle  glider4.cells
doc/: plaintext.md  rle.md
examples/: tick.rs
life-utils/src/: lib.rs  scanner.rs
lifelib/: Cargo.toml  README.md
lifelib/src/: image.rs  lib.rs  utilities.rs
lifelib/src/formats/: plaintext.rs  rle.rs
lifelib/src/testdata/: test_image1.ppm  test_image_color.ppm
src/: image.rs  images.rs  lib.rs  utilities.rs
src/formats/: mod.rs  newlines.rs  plaintext.rs  rle.rs  util.rs
src/testdata/: .gitattributes  test_image_gutter.ppm
tick/: Cargo.toml  README.md
tick/src/: main.rs  scanner.rs  tickset.rs  ticktemplate.rs
tick/tests/: cli.rs
tick/tests/data/: .gitattributes  glider-2-named.cells  glider.cells  glider1-named.cells  glider1-named.rle  glider10.rle  glider11-wrapxy.rle  glider11.cells  glider11.rle  glider12-wrapxy.rle  glider12-wrapy.rle  glider13-wrapxy.rle  glider3.cells  glider4.rle
