[package]
name = "lifelib"
version = "0.1.0-dev"
edition.workspace = true
rust-version.workspace = true
description = "Conway's Game of Life in Rust"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["conway", "game-of-life"]
categories = ["mathematics", "parser-implementations", "simulation", "visualization"]
publish = false

[dependencies]
clap = { version = "4.4.11", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"], optional = true }
image = { version = "0.24.7", optional = true, default-features = false }
patharg = { version = "0.4.0", optional = true }
thiserror = "1.0.51"

[dev-dependencies]
assert_matches = "1.5.0"
image = { version = "0.24.7", default-features = false, features = ["pnm"] }
pretty_assertions = "1.4.0"
rstest = { version = "0.18.2", default-features = false }

[features]
examples = ["dep:clap", "dep:patharg"]
image = ["dep:image"]
image-formats = ["image", "image/default"]

[[example]]
name = "tick"
required-features = ["examples"]

[lints]
workspace = true
