[package]
name = "tick"
version = "0.1.0-dev"
edition.workspace = true
rust-version.workspace = true
description = "Command for advancing Game of Life patterns"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"] }
csscolorparser = "0.6.2"
fs-err = "2.11.0"
lifelib = { path = "../lifelib", features = ["image", "image-formats"] }
rangemap = "1.5.1"
thiserror = "1.0.59"

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
assert_matches = "1.5.0"
predicates = { version = "3.1.0", default-features = false }
pretty_assertions = "1.4.0"
rstest = { version = "0.22.0", default-features = false }

[lints]
workspace = true
