[package]
name = "life-utils"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Common utilities for life workspace"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
thiserror = "2.0.0"

[lints]
workspace = true
